Add support for extra seats
